# my-openenv

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: augmentor.py  loader.py  preprocessor.py  schema.py
data/tickets/: seed_tickets.jsonl
env/: customer_support_env.py  episode.py  graders.py  models.py  reward.py
scripts/: download_dataset.py  preprocess.py  run_baseline.sh  validate-submission.sh  validate_submission.sh
server/: app.py  routes.py  schemas.py  session.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_api.py  test_env.py  test_graders.py  test_inference.py  test_reward.py  test_task_grader_entrypoints.py
utils/: config.py  logger.py  sentiment.py  similarity.py
